<resources>
    <string name="app_name">JamesYoel_00000028895_IF633_FL_UTS</string>
    <string name="logo_desc">Logo Aplikasi</string>
    <string name="login">LOGIN</string>
    <string name="profil">PROFIL</string>
    <string name="profil2">Profil</string>
    <string name="nama_app">MUSIC PLAYER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Log Out</string>
    <string name="ok">OK</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="title_activity_list_lagu">ListLaguActivity</string>
    <string name="action_settings">Action</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_list_lagu_menu">ListLaguMenuActivity</string>
</resources>