<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/judulAct"
        android:textSize="34sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="LOGIN\nMUSIC PLAYER"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:id="@+id/logoApp"
        app:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judulAct"
        android:src="@drawable/ic_baseline_play_circle_filled_24"
        android:contentDescription="@string/logo_desc">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoApp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/etUsername"
            android:drawableStart="@drawable/user"
            android:drawableTint="@color/black"
            android:singleLine="true"
            android:background="@drawable/edittext_backgroud"
            android:inputType="text"
            android:textColor="@color/black"
            android:labelFor="@+id/etUsername"
            android:autofillHints="@string/username">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/etPassword"
            android:background="@drawable/edittext_backgroud"
            android:singleLine="true"
            android:drawableLeft="@drawable/lock"
            android:drawableTint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:labelFor="@+id/etPassword"
            android:autofillHints="@string/password">
        </EditText>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        android:id="@+id/btnLogin"
        android:layout_marginTop="15dp">
    </androidx.appcompat.widget.AppCompatButton>
</androidx.constraintlayout.widget.ConstraintLayout>